--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,5 @@ tag_svn_revision = false
 
 [pytest]
 addopts = --ignore=setup.py --ignore=build --ignore=dist --doctest-modules
+norecursedirs = *.egg
+
